# mayl

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  novnc.html
.github/workflows/: ci.yml
src/: main.rs
sv/bridge/: run
sv/fluxbox/: run
sv/mayl/: run
sv/stalonetray/: run
sv/websockify/: run
sv/x11vnc/: run
sv/xvfb/: run
